sandbox/output
StringCalculator.java:8: error: cannot find symbol
        if (number.contains("\n")) {
            ^
  symbol:   variable number
  location: class StringCalculator
StringCalculator.java:9: error: cannot find symbol
            String[] numberArray = number.split("\n");
                                   ^
  symbol:   variable number
  location: class StringCalculator
2 errors
